Fix layout issues with block domain

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ a {
     margin: 1rem 0;
     outline: 0;
     overflow: hidden;
-    padding: 1.8rem 2rem;
+    padding: 1.8rem 4vw;
     text-align: center;
     text-overflow: ellipsis;
     text-transform: uppercase;
@@ -320,6 +320,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -788,10 +789,11 @@ a {
 }
 
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
     font-size: 2rem;
     font-weight: 600;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     justify-items: center;
     margin: 0 auto;
